--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-
+    <link rel="stylesheet" href="index.css">
     <title>React</title>
   </head>
   <body>
